istio/virtual_service.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: app-virtual-service
  namespace: hello-world
spec:
  hosts:
    - myapp.myorg.com
  gateways:
    - istio-system/app-gateway
  http:
    - route:
        - destination:
            host: hello-world.default.svc.cluster.local
            port:
              number: 80
